# snowbreak_gacha_export

./: CHANGELOG.md  Cargo.toml  README.md  readme.md
doc/: README_EN.md  readme_en.md
src/: action.rs  capture.rs  config.rs  game_info.rs  language.rs  main.rs  ocr_server.rs  record.rs  record_image.rs  save.rs  update.rs  user_interaction.rs
