[package]
name = "snowbreak_gacha_export"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
anyhow = "1.0.82"
image = "0.25.1"
paddleocr = "0.4.1"
base64 = "0.22.1"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
csv = "1.3.0"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
lazy_static = "1.4.0"
window_inspector = { git = "https://github.com/enximi/window_inspector" }
log = "0.4.21"
env_logger = "0.11.3"
enigo = { git = "https://github.com/enximi/enigo" }
crossterm = "0.27.0"
admin_runner = { git = "https://github.com/enximi/admin_runner" }
xcap = "0.0.9"
rust_xlsxwriter = "0.64.2"
enum-iterator = "2.1.0"
num-rational = "0.4.1"
semver = "1.0.22"
reqwest = "0.12.4"